@@ -1,7 +1,7 @@
 package ru.alex.eventspaceapi.database.function;
 
 import org.hibernate.dialect.function.StandardSQLFunction;
-import org.hibernate.query.ReturnableType;
+import org.hibernate.metamodel.model.domain.ReturnableType;
 import org.hibernate.sql.ast.SqlAstTranslator;
 import org.hibernate.sql.ast.spi.SqlAppender;
 import org.hibernate.sql.ast.tree.SqlAstNode;
@@ -11,6 +11,8 @@ import org.hibernate.type.SqlTypes;
 import java.util.List;
 
 public class ArrayContainsAllSqlFunction extends StandardSQLFunction {
+
+
     private static final BasicTypeReference<Boolean> RETURN_TYPE = new BasicTypeReference<>("boolean", Boolean.class, SqlTypes.BOOLEAN);
 
     public ArrayContainsAllSqlFunction(final String functionName) {
@@ -23,7 +25,7 @@ public class ArrayContainsAllSqlFunction extends StandardSQLFunction {
             throw new IllegalArgumentException("Function '%s' requires exactly 2 arguments".formatted(getName()));
         }
         sqlAppender.append("(");
-        sqlAstArguments.get(0).accept(translator);
+        sqlAstArguments.getFirst().accept(translator);
         sqlAppender.append(" @> ");
         sqlAppender.append("(");
         sqlAstArguments.get(1).accept(translator);
